# ProductManagementApp

./: README.md  pyproject.toml  requirements-devel.txt  requirements.txt
src/product_management_app/: __main__.py  datatypes.py  mongo.py
